# flaskr

./: .gitignore  Makefile  README.md  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskr/static/: style.css
flaskr/templates/: layout.jinja
flaskr/templates/auth/: login.jinja  register.jinja
flaskr/templates/blog/: create.jinja  index.jinja  update.jinja
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py
